[gd_scene load_steps=4 format=3 uid="uid://srq0238bc2cb"]

[ext_resource type="Script" uid="uid://d35ww85i6r5t3" path="res://mainmenu.gd" id="1_7vrkn"]
[ext_resource type="FontFile" uid="uid://cm2f6rdyjp858" path="res://fonts/Daydream DEMO.otf" id="2_fu7sn"]

[sub_resource type="LabelSettings" id="LabelSettings_jix8l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7vrkn")

[node name="background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.910864, 0.864772, 0.864334, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 25
text = "Dodge The Shrooms!"
label_settings = SubResource("LabelSettings_jix8l")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SettingsLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="FullScreenCheck" type="CheckButton" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[connection signal="value_changed" from="SettingsPanel/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="SettingsPanel/VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/FullScreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
